// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveFacebookUserMutation should add facebook info if user already logged in with another provider (and update name if its longer) 1`] = `
Object {
  "emails": Array [
    Object {
      "email": "fakeemail@fake.com",
      "providedBy": "google",
    },
  ],
  "name": "Fake Loooooooonger Name",
  "profileImages": Array [
    Object {
      "providedBy": "facebook",
      "url": "https://fakebucket.com",
    },
  ],
  "providerIds": Array [
    Object {
      "id": "googlefakeid",
      "providedBy": "google",
    },
    Object {
      "id": "facebookfakeid",
      "providedBy": "facebook",
    },
  ],
}
`;

exports[`SaveFacebookUserMutation should create a new account if never logged in with facebook before 1`] = `
Object {
  "emails": Array [
    Object {
      "email": "fakeemail@fake.com",
      "providedBy": "facebook",
    },
  ],
  "name": "Fake Name",
  "profileImages": Array [
    Object {
      "providedBy": "facebook",
      "url": "https://fakebucket.com",
    },
  ],
  "providerIds": Array [
    Object {
      "id": "fakeid",
      "providedBy": "facebook",
    },
  ],
}
`;
